[package]
name = "juniper_hyper"
version = "0.10.0"
edition = "2024"
rust-version = "1.85"
description = "`juniper` GraphQL integration with `hyper`."
license = "BSD-2-Clause"
authors = [
    "Damir Vandic <info@dvic.io>",
    "Kai Ren <tyranron@gmail.com>",
]
documentation = "https://docs.rs/juniper_hyper"
homepage = "https://github.com/graphql-rust/juniper/tree/master/juniper_hyper"
repository = "https://github.com/graphql-rust/juniper"
readme = "README.md"
categories = ["asynchronous", "web-programming", "web-programming::http-server"]
keywords = ["apollo", "graphql", "hyper", "juniper"]
exclude = ["/examples/", "/release.toml"]

[dependencies]
derive_more = { version = "2.0", features = ["debug", "display", "error"] }
http-body-util = "0.1"
hyper = { version = "1.0", features = ["server"] }
juniper = { version = "0.17", path = "../juniper", default-features = false }
serde_json = "1.0.18"
url = "2.0"

[dev-dependencies]
hyper = { version = "1.0", features = ["http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
juniper = { version = "0.17", path = "../juniper", features = ["expose-test-schema"] }
log = "0.4"
pretty_env_logger = "0.5"
reqwest = { version = "0.13", features = ["blocking", "rustls-tls"], default-features = false }
tokio = { version = "1.0", features = ["macros", "net", "rt-multi-thread"] }

[lints.clippy]
allow_attributes = "warn"
allow_attributes_without_reason = "warn"
[lints.rust]
closure_returning_async_block = "warn"
future_incompatible = { level = "warn", priority = -1 }
impl_trait_redundant_captures = "warn"
missing_docs = "warn"
non_ascii_idents = "forbid"
unsafe_code = "forbid"
unused_crate_dependencies = "warn"
