[package]
name = "juniper_iron"
version = "0.7.6"
edition = "2018"
authors = [
    "Magnus Hallin <mhallin@fastmail.com>",
    "Christoph Herzog <chris@theduke.at>",
]
description = "Iron integration for juniper"
license = "BSD-2-Clause"
documentation = "https://docs.rs/juniper_iron"
repository = "https://github.com/graphql-rust/juniper"

[dependencies]
futures = "0.3.1"
iron = ">= 0.5, < 0.7"
juniper = { version = "0.16.0-dev", path = "../juniper" }
serde_json = "1.0.2"
urlencoded = ">= 0.5, < 0.7"

[dev-dependencies]
iron-test = "0.6"
juniper = { version = "0.16.0-dev", path = "../juniper", features = ["expose-test-schema"] }
logger = "0.4"
mount = "0.4"
percent-encoding = "2.0"
router = "0.6"
url = "2.0"
