[package]
name = "juniper_iron"
version = "0.8.0-dev"
edition = "2021"
rust-version = "1.65"
description = "`juniper` GraphQL integration with `iron`."
license = "BSD-2-Clause"
authors = [
    "Magnus Hallin <mhallin@fastmail.com>",
    "Christoph Herzog <chris@theduke.at>",
]
documentation = "https://docs.rs/juniper_iron"
homepage = "https://github.com/graphql-rust/juniper/tree/master/juniper_iron"
repository = "https://github.com/graphql-rust/juniper"
readme = "README.md"
categories = ["web-programming", "web-programming::http-server"]
keywords = ["apollo", "graphql", "iron", "juniper"]
exclude = ["/examples/", "/release.toml"]

[dependencies]
futures = "0.3.22"
iron = ">= 0.5, < 0.7"
juniper = { version = "0.16.0-dev", path = "../juniper", default-features = false }
serde_json = "1.0.18"
urlencoded = ">= 0.5, < 0.7"

[dev-dependencies]
iron-test = "0.6"
juniper = { version = "0.16.0-dev", path = "../juniper", features = ["expose-test-schema"] }
logger = "0.4"
mount = "0.4"
percent-encoding = "2.0"
router = "0.6"
url = "2.0"
