[package]
name = "juniper_rocket"
version = "0.9.0"
edition = "2021"
rust-version = "1.73"
description = "`juniper` GraphQL integration with `rocket`."
license = "BSD-2-Clause"
authors = [
    "Magnus Hallin <mhallin@fastmail.com>",
    "Christoph Herzog <chris@theduke.at>",
    "Kai Ren <tyranron@gmail.com>",
]
documentation = "https://docs.rs/juniper_rocket"
homepage = "https://github.com/graphql-rust/juniper/tree/master/juniper_rocket"
repository = "https://github.com/graphql-rust/juniper"
readme = "README.md"
categories = ["asynchronous", "web-programming", "web-programming::http-server"]
keywords = ["apollo", "graphql", "juniper", "rocket"]
exclude = ["/examples/", "/tests/", "/release.toml"]

[dependencies]
futures = "0.3.22"
juniper = { version = "0.16.0", path = "../juniper", default-features = false }
rocket = { version = "0.5", default-features = false }
serde_json = "1.0.18"

# Fixes for `minimal-versions` check.
# TODO: Try remove on upgrade of `rocket` crate.
either = "1.8"
inlinable_string = "0.1.15"
pear = "0.2.4"
tempfile = "3.3"

[dev-dependencies]
juniper = { version = "0.16.0", path = "../juniper", features = ["expose-test-schema"] }
