[package]
name = "juniper_subscriptions"
version = "0.14.2"
edition = "2018"
authors = ["nWacky <gosha.evtushenko@gmail.com>"]
description = "Juniper SubscriptionCoordinator and SubscriptionConnection implementations"
license = "BSD-2-Clause"
documentation = "https://docs.rs/juniper_subscriptions"
repository = "https://github.com/graphql-rust/juniper"

[dependencies]
futures = "0.3.1"
juniper = { version = "0.14.2", path = "../juniper", default-features = false }

[dev-dependencies]
serde_json = "1.0"
tokio = { version = "0.2", features = ["macros", "rt-core"] }
