[package]
name = "juniper_subscriptions"
version = "0.17.0-dev"
edition = "2021"
rust-version = "1.65"
description = "Juniper `SubscriptionCoordinator` and `SubscriptionConnection` implementations."
license = "BSD-2-Clause"
authors = ["nWacky <gosha.evtushenko@gmail.com>"]
documentation = "https://docs.rs/juniper_subscriptions"
homepage = "https://github.com/graphql-rust/juniper/tree/master/juniper_subscriptions"
repository = "https://github.com/graphql-rust/juniper"
readme = "README.md"
categories = ["asynchronous", "web-programming", "web-programming::http-server"]
keywords = ["graphql", "server", "subscription", "web", "websocket"]
exclude = ["/release.toml"]

[dependencies]
futures = "0.3.22"
juniper = { version = "0.16.0-dev", path = "../juniper", default-features = false }

[dev-dependencies]
serde_json = "1.0.18"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
