[package]
name = "juniper_subscriptions"
version = "0.17.0"
edition = "2024"
rust-version = "1.85"
description = "Juniper `SubscriptionCoordinator` and `SubscriptionConnection` implementations."
license = "BSD-2-Clause"
authors = ["nWacky <gosha.evtushenko@gmail.com>"]
documentation = "https://docs.rs/juniper_subscriptions"
homepage = "https://github.com/graphql-rust/juniper/tree/master/juniper_subscriptions"
repository = "https://github.com/graphql-rust/juniper"
readme = "README.md"
categories = ["asynchronous", "web-programming", "web-programming::http-server"]
keywords = ["graphql", "server", "subscription", "web", "websocket"]
exclude = ["/release.toml"]

[dependencies]
futures = "0.3.22"
juniper = { version = "0.16", path = "../juniper", default-features = false }

[dev-dependencies]
serde_json = "1.0.18"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

[lints.clippy]
allow_attributes = "warn"
allow_attributes_without_reason = "warn"
[lints.rust]
closure_returning_async_block = "warn"
future_incompatible = { level = "warn", priority = -1 }
impl_trait_redundant_captures = "warn"
missing_docs = "warn"
non_ascii_idents = "forbid"
unsafe_code = "forbid"
unused_crate_dependencies = "warn"
