[package]
name = "juniper_warp"
version = "0.8.0-dev"
edition = "2018"
description = "`juniper` GraphQL integration with `warp`."
license = "BSD-2-Clause"
authors = ["Tom Houlé <tom@tomhoule.com>"]
documentation = "https://docs.rs/juniper_warp"
homepage = "https://github.com/graphql-rust/juniper/tree/master/juniper_warp"
repository = "https://github.com/graphql-rust/juniper"
readme = "README.md"
categories = ["asynchronous", "web-programming", "web-programming::http-server"]
keywords = ["apollo", "graphql", "juniper", "warp", "websocket"]
exclude = ["/examples/", "/release.toml"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
subscriptions = ["juniper_graphql_ws"]

[dependencies]
anyhow = "1.0"
futures = "0.3.1"
juniper = { version = "0.16.0-dev", path = "../juniper", default-features = false }
juniper_graphql_ws = { version = "0.4.0-dev", path = "../juniper_graphql_ws", optional = true }
serde = { version = "1.0.75", features = ["derive"] }
serde_json = "1.0.24"
thiserror = "1.0"
tokio = { version = "1.0", features = ["rt-multi-thread"] }
warp = "0.3"

[dev-dependencies]
env_logger = "0.9"
juniper = { version = "0.16.0-dev", path = "../juniper", features = ["expose-test-schema"] }
log = "0.4"
percent-encoding = "2.1"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
url = "2.0"
