[package]
name = "juniper_warp"
version = "0.9.0"
edition = "2024"
rust-version = "1.85"
description = "`juniper` GraphQL integration with `warp`."
license = "BSD-2-Clause"
authors = [
    "Tom Houlé <tom@tomhoule.com>",
    "Kai Ren <tyranron@gmail.com>",
]
documentation = "https://docs.rs/juniper_warp"
homepage = "https://github.com/graphql-rust/juniper/tree/master/juniper_warp"
repository = "https://github.com/graphql-rust/juniper"
readme = "README.md"
categories = ["asynchronous", "web-programming", "web-programming::http-server"]
keywords = ["apollo", "graphql", "juniper", "warp", "websocket"]
include = ["/examples/", "/src/", "/CHANGELOG.md", "/LICENSE", "/README.md"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
subscriptions = [
    "dep:futures",
    "dep:juniper_graphql_ws",
    "dep:log",
    "derive_more/error", "derive_more/from",
    "warp/websocket",
]

[dependencies]
derive_more = { version = "2.0", features = ["display", "error"] }
futures = { version = "0.3.22", optional = true }
juniper = { version = "0.17", path = "../juniper", default-features = false }
juniper_graphql_ws = { version = "0.5", path = "../juniper_graphql_ws", features = ["graphql-transport-ws", "graphql-ws"], optional = true }
log = { version = "0.4", optional = true }
serde_json = "1.0.18"
tokio = { version = "1.0", features = ["rt"] }
warp = "0.4"

# Fixes for `minimal-versions` check.
# TODO: Try remove on upgrade of `warp` crate.
http-body-util = "0.1.2"

[dev-dependencies]
async-stream = "0.3"
env_logger = "0.11"
http-body-util = "0.1"
itertools = "0.14"
juniper = { version = "0.17", path = "../juniper", features = ["expose-test-schema"] }
log = "0.4"
percent-encoding = "2.1"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
url = "2.0"
warp = { version = "0.4", features = ["test"] }

# Fixes for `minimal-versions` check.
# TODO: Try remove on upgrade of `warp` crate.
hyper-util = "0.1.12"

[lints.clippy]
allow_attributes = "warn"
allow_attributes_without_reason = "warn"
[lints.rust]
closure_returning_async_block = "warn"
future_incompatible = { level = "warn", priority = -1 }
impl_trait_redundant_captures = "warn"
missing_docs = "warn"
non_ascii_idents = "forbid"
unsafe_code = "forbid"
unused_crate_dependencies = "warn"

[[example]]
name = "subscription"
required-features = ["subscriptions"]
