[package]
name = "juniper_book_tests"
version = "0.0.0"
edition = "2018"
authors = ["Magnus Hallin <mhallin@fastmail.com>"]
publish = false

[dependencies]
juniper = { version = "0.16.0-dev", path = "../../juniper" }
juniper_iron = { version = "0.7", path = "../../juniper_iron" }
juniper_subscriptions = { version = "0.16", path = "../../juniper_subscriptions" }

derive_more = "0.99"
futures = "0.3"
iron = "0.5"
mount = "0.4"
serde_json = "1.0"
skeptic = "0.13"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "sync"] }
uuid = "0.8"

[build-dependencies]
skeptic = "0.13"
