[package]
name = "actix_subscriptions"
version = "0.1.0"
edition = "2018"
authors = ["Mihai Dinculescu <mihai.dinculescu@outlook.com>"]
publish = false

[dependencies]
actix-web = "4.0.0-beta.5"
actix-cors = "0.6.0-beta.1"
futures = "0.3"
env_logger = "0.8"
serde = "1.0"
serde_json = "1.0"
rand = "0.8"
tokio = "1.0"
async-stream = "0.3"
juniper = { path = "../../juniper", features = ["expose-test-schema"] }
juniper_actix = { path = "../../juniper_actix", features = ["subscriptions"] }
juniper_graphql_ws = { path = "../../juniper_graphql_ws" }
