[package]
name = "example_actix_subscriptions"
version = "0.0.0"
edition = "2018"
authors = ["Mihai Dinculescu <mihai.dinculescu@outlook.com>"]
publish = false


[dependencies]
juniper = { path = "../../juniper", features = ["expose-test-schema"] }
juniper_actix = { path = "../../juniper_actix", features = ["subscriptions"] }
juniper_graphql_ws = { path = "../../juniper_graphql_ws" }

actix-cors = "0.6"
actix-web = "4.0"
async-stream = "0.3"
futures = "0.3"
env_logger = "0.9"
rand = "0.8"
serde = "1.0"
serde_json = "1.0"
tokio = "1.0"
