[package]
name = "basic_subscriptions"
version = "0.1.0"
edition = "2018"
publish = false
authors = ["Jordao Rosario <jordao.rosario01@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.5", features = ["rt-core", "macros", "stream"] }

juniper = { path = "../../juniper" }
juniper_subscriptions = { path = "../../juniper_subscriptions" }
