[package]
name = "tracing_support"
version = "0.1.0"
authors = ["Christian Legnitto <christian@legnitto.com>"]
edition = "2018"
publish = false

[dependencies]
tracing = "0.1.21"
tracing-subscriber = "0.2.12"
# Note instead of a path you would use the proper Juniper version in your own
# project.
juniper = { path = "../../juniper", features = ["trace"] }
tokio = { version = "0.2.22", features = ["rt-core", "macros", "blocking"] }
