[package]
name = "warp_permission"
version = "0.1.0"
authors = ["Jonas Meurer <jmpunkt@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.2"
futures = { version = "0.3" }
tokio = { version = "0.2", features = ["rt-core", "macros"] }

juniper_codegen = { git = "https://github.com/graphql-rust/juniper", branch = "async-await", features = ["async"] }
juniper = { git = "https://github.com/graphql-rust/juniper", branch = "async-await", features = ["async"] }
juniper_warp = { git = "https://github.com/graphql-rust/juniper", branch = "async-await", features = ["async"] }

