[package]
name = "warp_subscriptions"
version = "0.2.0"
edition = "2018"
publish = false
 
[dependencies]
env_logger = "0.8.1"
futures = "0.3.1"
log = "0.4.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["macros", "rt"] }
tokio-stream = { version = "0.1.3" }
warp = "0.3"

juniper = { path = "../../juniper" }
juniper_graphql_ws = { path = "../../juniper_graphql_ws" }
juniper_warp = { path = "../../juniper_warp", features = ["subscriptions"] }
