[package]
name = "example_warp_subscriptions"
version = "0.0.0"
edition = "2018"
publish = false

[dependencies]
async-stream = "0.3"
env_logger = "0.9"
futures = "0.3.1"
juniper = { path = "../../juniper" }
juniper_graphql_ws = { path = "../../juniper_graphql_ws" }
juniper_warp = { path = "../../juniper_warp", features = ["subscriptions"] }
log = "0.4.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
warp = "0.3"
