[package]
name = "async_await"
version = "0.1.0"
authors = ["Christoph Herzog <chris@theduke.at>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
juniper = { path = "../../juniper", features = ["async"] }
futures-preview = "0.3.0-alpha.18"
tokio = "0.2.0-alpha.2"
