[package]
name = "async_await"
version = "0.1.0"
authors = ["Christoph Herzog <chris@theduke.at>"]
edition = "2018"

[features]
async = []

[dependencies]
juniper = { path = "../../juniper", features = ["async"] }
futures = "=0.3.1"
tokio = { version = "0.2", features = ["rt-core", "time", "macros"] }