[package]
name = "juniper_codegen_tests"
version = "0.0.0"
edition = "2018"
publish = false

[dependencies]
futures = "0.3.1"
juniper = { path = "../../juniper" }

[dev-dependencies]
serde_json = { version = "1.0" }
tokio = { version = "1.0", features = ["rt", "time", "macros"] }
trybuild = "1.0.25"
