[package]
name = "juniper_tests"
version = "0.1.0"
edition = "2018"
publish = false

[dependencies]
derive_more = "0.99"
futures = "0.3"
juniper = { path = "../../juniper" }
juniper_subscriptions = { path = "../../juniper_subscriptions" }

[dev-dependencies]
async-trait = "0.1.39"
serde_json = "1.0"
fnv = "1.0"
tokio = { version = "1.5", features = ["macros", "rt-core", "time"] }
